--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 POSTGRES_DB=mydb
 POSTGRES_USER=myuser
 POSTGRES_PASSWORD=mypassword
+POSTGRES_HOST=db  # <-- DODAJ TĘ LINIĘ
+POSTGRES_PORT=5432 # <-- DODAJ TĘ LINIĘ
